--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <ul class="nav__list">
                 <li class="nav__item"><a href="#home" class="nav__link">Hello</a></li>
                 <li class="nav__item"><a href="#services" class="nav__link">Mes services</a></li>
-                <li class="nav__item"><a href="#about" class="nav__link">Qui suis-je</a></li>
+                <li class="nav__item"><a href="#about" class="nav__link">A propos de moi</a></li>
                 <li class="nav__item"><a href="#work" class="nav__link">Portfolio</a></li>
                 <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
             </ul>
@@ -67,7 +67,7 @@
 
     <!-- About Me -->
     <section class="about-me" id="about">
-        <h2 class="section__title section__title--about">Qui suis-je ?</h2>
+        <h2 class="section__title section__title--about">A propos de moi</h2>
         <p class="section__subtitle section__subtitle--about">Développeur nomade basé à Dunkerque</p>
 
         <div class="about-me__body">
@@ -122,8 +122,8 @@
                     </a>
                 </li>
                 <li class="social-list__item">
-                    <a class="social-list__link" href="figma.com/@antoine_menskoi">
-                        <i class="fab fa-figma"></i>
+                    <a class="social-list__link" href="https://www.facebook.com/antoine.menskoi/">
+                        <i class="fab fa-facebook"></i>
                     </a>
                 </li>
             </ul>
