--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -23,7 +23,7 @@
             <ul class="nav__list">
                 <li class="nav__item"><a href="index.html" class="nav__link">Hello</a></li>
                 <li class="nav__item"><a href="index.html#services" class="nav__link">Mes services</a></li>
-                <li class="nav__item"><a href="index.html#about" class="nav__link">Qui suis-je</a></li>
+                <li class="nav__item"><a href="index.html#about" class="nav__link">A propos de moi</a></li>
                 <li class="nav__item"><a href="index.html#work" class="nav__link">Portfolio</a></li>
                 <li class="nav__item"><a href="index.html#contact" class="nav__link">Contact</a></li>
             </ul>
@@ -47,27 +47,27 @@
 </div>
 
     <!-- Footer -->
-    <footer class="footer">
+    <footer class="footer" id="contact">
         <a href="mailto:menskoi.antoine@outlook.com" class="footer__link">menskoi.antoine@outlook.com</a>
             <ul class="social-list">
                 <li class="social-list__item">
-                    <a class="social-list__link" href="https://linkedin.com">
+                    <a class="social-list__link" href="https://www.linkedin.com/in/antoinemenskoi/">
                         <i class="fab fa-linkedin"></i>
                     </a>
                 </li>
                 <li class="social-list__item">
-                    <a class="social-list__link" href="http://figma.com">
-                        <i class="fab fa-figma"></i>
-                    </a>
-                </li>
-                <li class="social-list__item">
-                    <a class="social-list__link" href="https://twitter.com">
+                    <a class="social-list__link" href="https://twitter.com/Antoine_Menskoi">
                         <i class="fab fa-twitter"></i>
                     </a>
                 </li>
                 <li class="social-list__item">
-                    <a class="social-list__link" href="https://github.com">
+                    <a class="social-list__link" href="https://github.com/antoinemenskoi">
                         <i class="fab fa-github"></i>
+                    </a>
+                </li>
+                <li class="social-list__item">
+                    <a class="social-list__link" href="https://www.facebook.com/antoine.menskoi/">
+                        <i class="fab fa-facebook"></i>
                     </a>
                 </li>
             </ul>
