let's see if this works

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -81,23 +81,23 @@
     <!-- My work -->
     <section class="my-work" id="work">
         <h2 class="section__title section__title--work">Mon portfolio</h2>
-        <p class="section__subtitle section__subtitle--work">Voici quelques-un de mes projets</p>
+        <p class="section__subtitle section__subtitle--work">Voici quelques-un de mes projets (soon)</p>
 
         <div class="portfolio">
             <!-- Portfolio item 01-->
-            <a href="portfolio-item.html" class="portfolio__item">
+            <!-- <a href="portfolio-item.html" class="portfolio__item">
                 <img src="img/portfolio-01.jpg" alt="" class="portfolio__img">
-            </a>
+            </a> -->
 
             <!-- Portfolio item 02-->
-            <a href="portfolio-item.html" class="portfolio__item">
+            <!-- <a href="portfolio-item.html" class="portfolio__item">
                 <img src="img/portfolio-02.jpg" alt="" class="portfolio__img">
-            </a>
+            </a> -->
 
             <!-- Portfolio item 03-->
-            <a href="portfolio-item.html" class="portfolio__item">
+            <!-- <a href="portfolio-item.html" class="portfolio__item">
                 <img src="img/portfolio-03.jpg" alt="" class="portfolio__img">
-            </a>
+            </a> -->
 
         </div>
     </section>
