--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <h1 class="section__title section__title--intro">
             Enchanté, je suis <strong>Antoine Menskoï</strong>
         </h1>
-        <p class="section__subtitle section__subtitle--intro">Développeur front-end freelance</p>
-        <img src="img/devantoine-01.jpg" alt="une photo d'Antoine Menskoï qui sourit" class="intro__img">
+        <p class="section__subtitle section__subtitle--intro">Développeur web freelance</p>
+        <img src="img/devantoine-01.jpg" alt="une photo d'Antoine développeur web freelance" class="intro__img">
     </section>
 
 
@@ -75,7 +75,7 @@
             <p></p>
         </div>
 
-        <img src="img/devantoine-02.jpg" alt="une autre photo d'Antoine Menskoï qui sourit" class="about-me__img">
+        <img src="img/devantoine-02.jpg" alt="une autre photo d'Antoine développeur web" class="about-me__img">
     </section>
 
     <!-- My work -->
