--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <script src="https://kit.fontawesome.com/a3701a8dd8.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6964SZHCT3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6964SZHCT3');
+</script>
 </head>
 
 <body>
@@ -85,19 +94,31 @@
 
         <div class="portfolio">
             <!-- Portfolio item 01-->
-            <!-- <a href="portfolio-item.html" class="portfolio__item">
+             <a href="portfolio-item.html" class="portfolio__item">
                 <img src="img/portfolio-01.jpg" alt="" class="portfolio__img">
-            </a> -->
+            </a> 
 
             <!-- Portfolio item 02-->
-            <!-- <a href="portfolio-item.html" class="portfolio__item">
+             <a href="portfolio-item.html" class="portfolio__item">
                 <img src="img/portfolio-02.jpg" alt="" class="portfolio__img">
-            </a> -->
+            </a> 
 
             <!-- Portfolio item 03-->
-            <!-- <a href="portfolio-item.html" class="portfolio__item">
+             <a href="portfolio-item.html" class="portfolio__item">
                 <img src="img/portfolio-03.jpg" alt="" class="portfolio__img">
-            </a> -->
+            </a> 
+             <a href="portfolio-item.html" class="portfolio__item">
+                <img src="img/portfolio-03.jpg" alt="" class="portfolio__img">
+            </a> 
+             <a href="portfolio-item.html" class="portfolio__item">
+                <img src="img/portfolio-03.jpg" alt="" class="portfolio__img">
+            </a> 
+             <a href="portfolio-item.html" class="portfolio__item">
+                <img src="img/portfolio-03.jpg" alt="" class="portfolio__img">
+            </a> 
+             <a href="portfolio-item.html" class="portfolio__item">
+                <img src="img/portfolio-03.jpg" alt="" class="portfolio__img">
+            </a> 
 
         </div>
     </section>
