--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <!-- My services-->
     <section class="my-services" id="services">
-        <h2 class="section__title section__title--services">Un peu plus sur moi</h2>
+        <h2 class="section__title section__title--services">Ce que je propose</h2>
             <div class="services">
                 <div class="service">
                     <h3>Design</h3>
@@ -94,9 +94,9 @@
 
         <div class="portfolio">
             <!-- Portfolio item 01-->
-             <!-- <a href="portfolio-item.html" class="portfolio__item">
+             <a href="portfolio-item-01.html" class="portfolio__item">
                 <img src="img/portfolio-01.jpg" alt="" class="portfolio__img">
-            </a>  -->
+            </a> 
 
             <!-- Portfolio item 02-->
              <!-- <a href="portfolio-item.html" class="portfolio__item">
