--- a/portfolio-item-01.html
+++ b/portfolio-item-01.html
@@ -33,17 +33,19 @@
 
 <section class="intro" id="home">
     <h1 class="section__title section__title--intro">
-        Le titre de <strong>mon projet</strong>
+        Site vitrine de <strong>Florian Monnier</strong>
     </h1>
-    <p class="section__subtitle section__subtitle--intro">A short subtitle</p>
+    <p class="section__subtitle section__subtitle--intro">Site vitrine pour lettreur manga</p>
     <img src="img/portfolio-01.jpg" alt="" class="intro__img">
 </section>
 
 <div class="portfolio-item-individual">
-    <p></p>
-    <img src="img/portfolio-details.jpg" alt="">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga similique asperiores, aperiam, provident itaque aliquam perspiciatis, corporis iure ipsa deleniti sit voluptate? Facilis maiores sed alias corporis sequi, minima vero!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem recusandae possimus quos optio cupiditate. Iste debitis repellendus eveniet dolores doloremque quisquam incidunt distinctio, numquam itaque explicabo corporis voluptates aperiam doloribus.</p>
+    
+    <img src="img/portfolio-01.jpg" alt="">
+    <p>Site vitrine pour lettreur manga, je suis donc parti sur un style japon et manga</p>
+    <p>La partie portoflio (pas encore fini), va être découper par éditeur puis par projet et enfin une page qui décrira le travail effectué en détail. Ceci permettra à Florian Monnier de mettre en avant ces capacités de lettreur bien plus qu'avec un simple CV.</p>
+    <p> Vous pouvez suivre l'avancement du projet ici : <a href="https://antoinemenskoi.github.io/Florian-Monnier-portfolio/">Github</a></p>
+    <a href="index.html">Retour au site</a>
 </div>
 
     <!-- Footer -->
