added a button for the return to site & reorginsed the <p> of the project

--- a/portfolio-item-01.html
+++ b/portfolio-item-01.html
@@ -42,10 +42,11 @@
 <div class="portfolio-item-individual">
     
     <img src="img/portfolio-01.jpg" alt="">
-    <p>Site vitrine pour lettreur manga, je suis donc parti sur un style japon et manga</p>
-    <p>La partie portoflio (pas encore fini), va être découper par éditeur puis par projet et enfin une page qui décrira le travail effectué en détail. Ceci permettra à Florian Monnier de mettre en avant ces capacités de lettreur bien plus qu'avec un simple CV.</p>
+    <p>Site vitrine pour lettreur manga, je suis donc parti sur un style japon et manga.<br><br> 
+        La partie portoflio (pas encore fini), va être découper par éditeur puis par projet et enfin une page qui décrira le travail effectué en détail.<br> 
+        Ceci permettra à Florian Monnier de mettre en avant ces capacités de lettreur bien plus qu'avec un simple CV.</p>
     <p> Vous pouvez suivre l'avancement du projet ici : <a href="https://antoinemenskoi.github.io/Florian-Monnier-portfolio/">Github</a></p>
-    <a href="index.html">Retour au site</a>
+    <a href="index.html" class="btn">Retour au site</a>
 </div>
 
     <!-- Footer -->
