removed the (soon)

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <!-- My work -->
     <section class="my-work" id="work">
         <h2 class="section__title section__title--work">Mon portfolio</h2>
-        <p class="section__subtitle section__subtitle--work">Voici quelques-un de mes projets (soon)</p>
+        <p class="section__subtitle section__subtitle--work">Voici quelques-un de mes projets</p>
 
         <div class="portfolio">
             <!-- Portfolio item 01-->
