changed mes competences title

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <!-- My services-->
     <section class="my-services" id="services">
-        <h2 class="section__title section__title--services">Ce que je propose</h2>
+        <h2 class="section__title section__title--services">Mes compétences</h2>
             <div class="services">
                 <div class="service">
                     <h3>Design</h3>
