added (en cours) to the project

--- a/portfolio-item-01.html
+++ b/portfolio-item-01.html
@@ -35,7 +35,7 @@
     <h1 class="section__title section__title--intro">
         Site vitrine de <strong>Florian Monnier</strong>
     </h1>
-    <p class="section__subtitle section__subtitle--intro">Site vitrine pour lettreur manga</p>
+    <p class="section__subtitle section__subtitle--intro">Site vitrine pour lettreur manga (en cours)</p>
     <img src="img/portfolio-01.jpg" alt="" class="intro__img">
 </section>
 
